
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ../include )

set(LIBRARY_FILES
)

add_library( CommonAPI-SomeIP SHARED
CommonAPI-SomeIP.cpp
SomeIPRuntime.cpp
#test.cpp
)

TARGET_LINK_LIBRARIES( CommonAPI-SomeIP
	${COMMONAPI_LIBRARIES}
	${DLT_LIBRARIES}
	someip_client_lib
)

set_target_properties(CommonAPI-SomeIP PROPERTIES VERSION ${VERSION} SOVERSION ${${PROJECT_NAME}_MAJOR_VERSION})

INSTALL(TARGETS CommonAPI-SomeIP
  LIBRARY DESTINATION lib
)
